--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     
     <div class="w_max">
         <div class="game_reset" type="reset">reset</div>
-        <div><p><span id="mark_turn">〇</span>のターン</p></div>
+        <div class="turn"><p><span id="mark_turn">〇</span>のターン</p></div>
     </div>
 
     <div class="grid_box game">
