--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
         <div class="turn"><p><span id="mark_turn">〇</span>のターン</p></div>
     </div>
 
+    <div class="player circle">〇<div class="numWin">0</div></div>
+    <div class="player cross">×<div class="numWin">0</div></div>
+
     <div class="grid_box game">
         <div class="part"></div>
         <div class="part"></div>
